force-app/main/default/objects/Order_Cost_Center_Setup__c/Order_Cost_Center_Setup__c.object-meta.xml
<CustomObject>
    <description>This object will be used for order cost setup rules which will be used for populating the value and approver on order</description>
    <label>Order Cost Center Setup</label>
    <nameField>
        <displayFormat>OCCS-{00000000}</displayFormat>
        <label>Order Cost Center Setup Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Cost Center Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>