force-app/main/default/objects/Order_Cost_Center_Setup__c/fields/Approver_1_Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approver_1_Min_Amount__c</fullName>
    <label>Approver 1 Min Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>