force-app/main/default/objects/Order_Cost_Center_Setup__c/fields/Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cost_Center_Logic_Tables1</relationshipName>
    <type>Lookup</type>
</CustomField>