force-app/main/default/objects/Order_Cost_Center_Setup__c/fields/Call_Center__c.field-meta.xml
<CustomField>
    <fullName>Call_Center__c</fullName>
    <label>Call  Center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grohe</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>