force-app/main/default/objects/Order_Cost_Center_Setup__c/fields/Cost_Center_Sold_to__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_Sold_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Center/Sold to</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Plant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Cost Center Setup (Cost Center/Sold to)</relationshipLabel>
    <relationshipName>Cost_Center_Logic_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>