force-app/main/default/objects/Order_Cost_Center_Setup__c/fields/Credit_Card_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Authorization__c</fullName>
    <label>Credit Card Authorization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>