force-app/main/default/objects/Order_Cost_Center_Setup__c/fields/Customer_Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Material_Number__c</fullName>
    <label>Customer Material Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>