force-app/main/default/objects/Order_Cost_Center_Setup__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>91</fullName>
            </value>
            <value>
                <fullName>96</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>