force-app/main/default/objects/Order_Cost_Center_Setup__c/fields/Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ID__c</fullName>
    <label>Merchant ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>