force-app/main/default/objects/Order_Cost_Center_Setup__c/fields/Order_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Record_Type__c</fullName>
    <label>Order Record  Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Warranty Order</fullName>
            </value>
            <value>
                <fullName>Credit Card Sales</fullName>
            </value>
            <value>
                <fullName>Good Will</fullName>
            </value>
            <value>
                <fullName>Credit_Card_Sales</fullName>
            </value>
            <value>
                <fullName>Good_Will_Order</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
            <value>
                <fullName>Warranty_Replacement_Order</fullName>
            </value>
            <value>
                <fullName>FOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>