force-app/main/default/objects/Order_Cost_Center_Setup__c/fields/Order_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Sub_Type__c</fullName>
    <label>Order Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FD</fullName>
            </value>
            <value>
                <fullName>ZCRS</fullName>
            </value>
            <value>
                <fullName>DR</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>ZWCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>