force-app/main/default/objects/Order_Cost_Center_Setup__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A/S Acrylics-860060-ZWCR</fullName>
            </value>
            <value>
                <fullName>A/S Chinaware-840060-ZWCR</fullName>
            </value>
            <value>
                <fullName>A/S Fittings-820060-ZWCR</fullName>
            </value>
            <value>
                <fullName>A/S Furnitures-870060-ZWCR</fullName>
            </value>
            <value>
                <fullName>A/S Metals-850060-ZWCR</fullName>
            </value>
            <value>
                <fullName>Alberta-19994058-ZCRS</fullName>
            </value>
            <value>
                <fullName>British Columbia-19994059-ZCRS</fullName>
            </value>
            <value>
                <fullName>Credit Card-97444000-ZCRS</fullName>
            </value>
            <value>
                <fullName>Credit Memo-974440000-CR</fullName>
            </value>
            <value>
                <fullName>DTC Warranty-380300-FD</fullName>
            </value>
            <value>
                <fullName>DXV Acrylics-950060-ZWCR</fullName>
            </value>
            <value>
                <fullName>DXV Chinaware-930060-ZWCR</fullName>
            </value>
            <value>
                <fullName>DXV Fittings-940060-ZWCR</fullName>
            </value>
            <value>
                <fullName>FG 1 to 5 years-220209-ZWCR</fullName>
            </value>
            <value>
                <fullName>FG 6 to 10 years-220210-FD</fullName>
            </value>
            <value>
                <fullName>Good Will-220211-FD</fullName>
            </value>
            <value>
                <fullName>Grohe-890060-ZWCR</fullName>
            </value>
            <value>
                <fullName>Manitoba-19994056-ZCRS</fullName>
            </value>
            <value>
                <fullName>New Brunswick-19994052-ZCRS</fullName>
            </value>
            <value>
                <fullName>Newfoundland-19994055-ZCRS</fullName>
            </value>
            <value>
                <fullName>Non-Grohe-400211-FD</fullName>
            </value>
            <value>
                <fullName>Nova Scotia-19994053-ZCRS</fullName>
            </value>
            <value>
                <fullName>Nunavut-19994061-ZCRS</fullName>
            </value>
            <value>
                <fullName>Ontario-19994050-ZCRS</fullName>
            </value>
            <value>
                <fullName>Parts in SAP-974440000-ZCRS</fullName>
            </value>
            <value>
                <fullName>Parts in SAP-978880000-ZCRS</fullName>
            </value>
            <value>
                <fullName>Parts not in SAP-974440000-DR</fullName>
            </value>
            <value>
                <fullName>Parts not in SAP-978880000-DR</fullName>
            </value>
            <value>
                <fullName>Prince Edward Island-19994054-ZCRS</fullName>
            </value>
            <value>
                <fullName>Quebec-19994051-ZCRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>