force-app/main/default/objects/Order_Cost_Center_Setup__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F13</fullName>
            </value>
            <value>
                <fullName>F08</fullName>
            </value>
            <value>
                <fullName>C11</fullName>
            </value>
            <value>
                <fullName>C13</fullName>
            </value>
            <value>
                <fullName>C23</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>