force-app/main/default/objects/Order_Cost_Center_Setup__c/fields/Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization__c</fullName>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1001</fullName>
            </value>
            <value>
                <fullName>1101</fullName>
            </value>
            <value>
                <fullName>3001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>