force-app/main/default/objects/Order_Cost_Center_Setup__c/fields/ZZASBOI2__c.field-meta.xml
<CustomField>
    <fullName>ZZASBOI2__c</fullName>
    <label>ZZASBOI2</label>
    <length>3</length>
    <type>Text</type>
</CustomField>