force-app/main/default/objects/Order_Cost_Center_Setup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country_Code__c</columns>
    <columns>Call_Center__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Order_Record_Type__c</columns>
    <columns>Approver_1__c</columns>
    <columns>Approver_2__c</columns>
    <columns>Approver_3__c</columns>
    <columns>Order_Sub_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>